# MCP-CREATE_AGENT

./: .dockerignore  .env.example  .gitignore  AGENTE_WARP_CREADO.md  AGENTE_WARP_DATOS.md  Dockerfile.python  INTEGRATION.md  README.md  pyproject.toml  requirements.txt  test_create_agent.py  test_mcp_client.py  validate_mcp_config.py
creacion_agente_mcp/: config.py  main.py
creacion_agente_mcp/application/use_cases/: __init__.py  create_agent_use_case.py  get_agent_use_case.py  list_agents_use_case.py
creacion_agente_mcp/domain/entities/: __init__.py  agent.py
creacion_agente_mcp/domain/exceptions/: __init__.py  domain_exception.py
creacion_agente_mcp/domain/repositories/: __init__.py  agent_repository.py
creacion_agente_mcp/domain/value_objects/: __init__.py  agent_description.py  agent_id.py  agent_name.py  ai_model.py  model_configuration.py
creacion_agente_mcp/infrastructure/azure/: __init__.py  azure_agent_repository.py  azure_foundry_client.py
creacion_agente_mcp/presentation/: mcp_server.py
k8s/: configmap.yaml  deployment.python.yaml  deployment.yaml  hpa.yaml  secret.python.yaml  secret.yaml  service.yaml
